--- a/newtab/index.html
+++ b/newtab/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>NewTab</title>
+        <link rel="stylesheet" type="text/css" href="css/style.css">
     </head>
 
     <body>
