--- a/NewTab/index.html
+++ b/NewTab/index.html
@@ -8,17 +8,15 @@
     <body>
         <div class="outer">
             <div class="middle">
-                <div class="center">
-                    <div class="container">
-                        <div class="header">
-                            <h1>NATFAN</h1>
-                        </div>
-                        <div class="timer">
-                            <h3>timergoeshere.js</h3>
-                        </div>
-                        <div class="links">
-                            <p>link | link | link</p>
-                        </div>
+                <div class="inner">
+                    <div class="header">
+                        <h1>NATFAN</h1>
+                    </div>
+                    <div class="timer">
+                        <h3>timergoeshere.js</h3>
+                    </div>
+                    <div class="links">
+                        <p>link | link | link</p>
                     </div>
                 </div>
             </div>
