--- a/NewTab/index.html
+++ b/NewTab/index.html
@@ -3,17 +3,46 @@
     <head>
         <title>NewTab</title>
         <link rel="stylesheet" type="text/css" href="css/style.css">
+        <link href="http://fonts.googleapis.com/css?family=Anonymous+Pro|Roboto:100" rel="stylesheet" type="text/css">
+        <script>
+            function datetime_time() {
+                var cdt = new Date();
+                var h = (cdt.getHours()<10?'0':'') + cdt.getHours();
+                var m = (cdt.getMinutes()<10?'0':'') + cdt.getMinutes();
+                var s = (cdt.getSeconds()<10?'0':'') + cdt.getSeconds();
+                document.getElementById('time').innerHTML = h + ":" + m + ":" + s;
+                setTimeout(datetime_time, 500);
+            }
+            function datetime_date() {
+                var cdt = new Date();
+                var days = [ "Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday", "Sunday" ];
+                var months = [ "Jan", "Feb", "Mar", "Apr", "May", "June", "July", "Aug", "Sept", "Oct", "Nov", "Dec" ];
+                var d = days[cdt.getDay()];
+                var dn = cdt.getDate();
+                if (dn == 1 || dn == 21 || dn == 31) {
+                    dt = "st";
+                } else if (dn == 2 || dn == 22) {
+                    dt = "nd";
+                } else if (dn == 3 || dn == 23) {
+                    dt = "rd";
+                } else {
+                    dt = "th";
+                }
+                var m = months[cdt.getMonth()];
+                document.getElementById('date').innerHTML = d + ", " + dn + dt + " " + m;
+                setTimeout(datetime_date, 500);
+            }
+            datetime_time();
+            datetime_date();
+        </script>
     </head>
 
-    <body>
+    <body onload="datetime_time(), datetime_date()">
         <div class="outer">
             <div class="middle">
                 <div class="inner">
                     <div class="header">
                         <h1>NATFAN</h1>
-                    </div>
-                    <div class="timer">
-                        <h3>timergoeshere.js</h3>
                     </div>
                     <div class="links">
                         <p>link | link | link</p>
@@ -21,5 +50,6 @@
                 </div>
             </div>
         </div>
+        <p class="bottom"><span class="bottom_left" id="time"></span> <span class="bottom_right" id="date"></span></p>
     </body>
 </html>
