--- a/NewTab/index.html
+++ b/NewTab/index.html
@@ -45,7 +45,7 @@
                         <h1>NATFAN</h1>
                     </div>
                     <div class="links">
-                        <p>link | link | link</p>
+                        <p><a href="https://google.com">google</a> | <a href="https://natfan.github.io">natfan.github.io</a> | <a href="https://reddit.com/r/all">reddit/r/all</a></p>
                     </div>
                 </div>
             </div>
