--- a/NewTab/index.html
+++ b/NewTab/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>NewTab</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="css/style.css">
         <link href="http://fonts.googleapis.com/css?family=Anonymous+Pro|Roboto:100" rel="stylesheet" type="text/css">
         <script>
