--- a/NewTab/index.html
+++ b/NewTab/index.html
@@ -30,7 +30,8 @@
                     dt = "th";
                 }
                 var m = months[cdt.getMonth()];
-                document.getElementById('date').innerHTML = d + ", " + dn + dt + " " + m;
+                var y = cdt.getYear();
+                document.getElementById('date').innerHTML = d + ", " + dn + dt + " " + m + " " + y;
                 setTimeout(datetime_date, 500);
             }
             datetime_time();
@@ -46,7 +47,7 @@
                         <h1>NATFAN</h1>
                     </div>
                     <div class="links">
-                        <p><a href="https://google.com">google</a> | <a href="https://natfan.github.io">natfan.github.io</a> | <a href="https://reddit.com/r/all">reddit/r/all</a></p>
+                        <p><a href="https://google.com">google</a> | <a href="https://natfan.io">natfan.io</a> | <a href="https://reddit.com/r/all">reddit/r/all</a></p>
                     </div>
                 </div>
             </div>
